- Improve visual. - Fix bug where turn announcement was present after winner had been announced. - Improve code readability.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    background-color: rgb(201, 201, 201);
+}
+
 #initializer {
     position: fixed;
     left: 50%;
@@ -24,6 +28,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+#playerXName,
+#playerOName {
+    margin-top: 1rem;
 }
 
 #playButton {
